# api-endpoint

./: .env  .env.example  Cargo.toml  Dockerfile  Readme.MD  build.rs
.VSCodeCounter/2023-05-06_21-38-25/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: rust.yml
bindings/user/: PermissionsListResponse.ts
src/: main.rs
src/data/: connection_pool.rs  mod.rs  repository.rs
src/domain/: errors.rs  mod.rs  request.rs  response.rs  service_register.rs
src/extractor/: mod.rs  optional_authentication.rs  required_authentication.rs  validation.rs
src/request/: mod.rs  notification.rs  templating.rs  user.rs
src/response/: mod.rs  notification.rs  templating.rs  user.rs
src/routes/: notification.rs  templating.rs  user.rs
src/service/: mod.rs  security.rs  token.rs  user.rs
src/utilities/: config.rs  constants.rs  events.rs  mod.rs  service_register.rs  token.rs
src/utilities/states/: channels.rs  email_service.rs  mod.rs  notification_service.rs  templating_service.rs  token_service.rs  user_service.rs
