[package]
name = "api-endpoint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
madtofan-microservice-common = { path = "../common" }
anyhow = "1.0.68"
axum = { version = "0.6.6", features = ["tower-log", "headers"] }
clap = { version = "4.0.32", features = ["derive", "env"] }
dotenv = "0.15.0"
http-body = "0.4.5"
jsonwebtoken = "8.2.0"
lazy_static = "1.4.0"
serde = { version = "1.0.151", features = ["derive"] }
time = "0.3.17"
tokio = { version = "1.23.0", features = ["full"] }
tonic = "0.8.3"
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.3.5", features = ["trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
validator = { version = "0.16.0", features = ["derive"] }
wasm-bindgen = "0.2.83"
async-trait = "0.1.64"
urlencoding = "2.1.2"
tagged-channels = "0.0.1"
futures = "0.3.28"
async-stream = "0.3.5"
serde_json = "1.0.105"
